--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
-	
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="windows-1251">
 
@@ -15,6 +16,16 @@
       display: flex;
       align-items: center;
       gap: 15px;
+      flex: 1;
+    }
+
+    .gear {
+      width: 50px;
+    }
+
+    .gear svg {
+      cursor: pointer;
+      color: hsl(0,0%,30%);
     }
 
     .number {
@@ -50,18 +61,51 @@
       font-size: 20px;
       width: 100px;
     }
+
+    .main {
+      margin: 0 auto;
+      max-width: 500px;
+    }
+
+    .main-2 {
+      display: flex;
+    }
+
+    .options {
+      display: none;
+      padding: 5px;
+    }
   </style>
 </head>
 
 <body>
 
-<div class="container">
-  <div id="firstNumber" class="number"></div>
-  <div id="sign" class="sign">X</div>
-  <div id="secondNumber" class="number"></div>
-  <input id="result" />
+<div class="main">
+
+  <div class="options" id="options">
+    <div>
+      <label>Имя ребенка</label> <input id="child-name">
+    </div>
+    <div>
+      <label>Голос</label>
+      <select id="voices" onchange="onChangeVoice()"></select>
+    </div>
+  </div>
+
+  <div class="main-2">
+    <div class="container">
+      <div id="firstNumber" class="number"></div>
+      <div id="sign" class="sign">X</div>
+      <div id="secondNumber" class="number"></div>
+      <input id="result" />
+    </div>
+    <div class="gear">
+      <svg onclick="onClickGear()" width="20" height="20" viewBox="0 0 16 16" class="quieter parent-hover-link-unquiet" style="shape-rendering: geometricprecision;"><path fill-rule="nonzero" fill="currentColor" d="M2.5 11.5C2.36739 11.5 2.24021 11.5527 2.14645 11.6464C2.05268 11.7402 2 11.8674 2 12C2 12.1326 2.05268 12.2598 2.14645 12.3536C2.24021 12.4473 2.36739 12.5 2.5 12.5H13.5C13.6326 12.5 13.7598 12.4473 13.8536 12.3536C13.9473 12.2598 14 12.1326 14 12C14 11.8674 13.9473 11.7402 13.8536 11.6464C13.7598 11.5527 13.6326 11.5 13.5 11.5H2.5Z M2.5 3.5C2.36739 3.5 2.24021 3.55268 2.14645 3.64645C2.05268 3.74021 2 3.86739 2 4C2 4.13261 2.05268 4.25979 2.14645 4.35355C2.24021 4.44732 2.36739 4.5 2.5 4.5H13.5C13.6326 4.5 13.7598 4.44732 13.8536 4.35355C13.9473 4.25979 14 4.13261 14 4C14 3.86739 13.9473 3.74021 13.8536 3.64645C13.7598 3.55268 13.6326 3.5 13.5 3.5H2.5Z M2.5 7.5C2.36739 7.5 2.24021 7.55268 2.14645 7.64645C2.05268 7.74021 2 7.86739 2 8C2 8.13261 2.05268 8.25979 2.14645 8.35355C2.24021 8.44732 2.36739 8.5 2.5 8.5H13.5C13.6326 8.5 13.7598 8.44732 13.8536 8.35355C13.9473 8.25979 14 8.13261 14 8C14 7.86739 13.9473 7.74021 13.8536 7.64645C13.7598 7.55268 13.6326 7.5 13.5 7.5H2.5Z"></path></svg>
+    </div>
+  </div>
+  <button id="buttonRun" onclick="run()">Задача</button>
 </div>
-<button id="buttonRun" onclick="run()">Задача</button>
+
 
 </body>
 
@@ -69,18 +113,76 @@
 
 
 <script>
+  let voiceIndex = Number(localStorage.getItem('voice-index')) || 0;
+
+  function onChangeVoice(){
+    const el = document.getElementById('voices');
+
+    voiceIndex = el.selectedIndex;
+
+    const text = `Проверка голоса! ` + ruVoices[voiceIndex].name;
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.voice = ruVoices[voiceIndex];
+    window.speechSynthesis.speak(utterance);
+
+    localStorage.setItem('voice-index', voiceIndex);
+  }
+
+  let ruVoices;
+
+  function setSpeech() {
+    return new Promise(
+      function (resolve, reject) {
+        let synth = window.speechSynthesis;
+        let id;
+
+        id = setInterval(() => {
+          if (synth.getVoices().length !== 0) {
+            resolve(synth.getVoices());
+            clearInterval(id);
+          }
+        }, 10);
+      }
+    )
+  }
+
+  let s = setSpeech();
+  s.then((voices) => {
+    ruVoices = voices.filter((voice) => voice.lang === 'ru-RU');
+
+    ruVoices.forEach((voice, index)=>{
+      const el = document.createElement('option');
+
+      if(index === voiceIndex){
+        el.setAttribute('selected', true);
+      }
+      el.setAttribute('value', index);
+      el.innerHTML = voice.name;
+
+      const voicesEl = document.getElementById('voices');
+      voicesEl.appendChild(el);
+    });
+  });
+
+  function onClickGear(){
+    const el = document.getElementById('options');
+
+    if(el.style.display === 'block'){
+      el.style.display = '';
+    }
+    else {
+      el.style.display = 'block';
+    }
+  }
+
+
   const setNumbers = new Set();
   let deep = 0;
-  let pickedLang;
-  const voices = speechSynthesis.getVoices();
-	
-voices.forEach((voice)=>{
-  if(voice.lang === 'ru-Ru'){
-    pickedLang = voice;
-  }
-});
 
 document.getElementById('result').addEventListener('input', onChange);
+document.getElementById('child-name').addEventListener('input', onChangeName);
+
+document.getElementById('child-name').value = getName();
 
 function getNextNumbers(){
   const a = generateRandomNumber(1, 10);
@@ -110,14 +212,13 @@ function getNextNumbers(){
 
 function run(){
   deep = 0;
-  const { a, b, stop } = getNextNumbers();
+	const { a, b, stop } = getNextNumbers();
 
   if(stop){
     const text = `Похоже ты все решил. Молодец!`;
 
     const utterance = new SpeechSynthesisUtterance(text);
-    //utterance.voice = speechSynthesis.getVoices()[20];
-    utterance.voice = pickedLang;
+    utterance.voice = ruVoices[voiceIndex];
     window.speechSynthesis.speak(utterance);
     return;
   }
@@ -130,12 +231,19 @@ function run(){
   document.getElementById('result').value = '';
   document.getElementById('result').focus();
 
-	const text = `Ваня, сколько будет ${a} умножить на ${b}?`;
+  const name = getName();
+
+	const text = `${name}, сколько будет ${a} умножить на ${b}?`;
 
 	const utterance = new SpeechSynthesisUtterance(text);
-	//utterance.voice = speechSynthesis.getVoices()[20];
-	utterance.voice = pickedLang;
+  utterance.voice = ruVoices[voiceIndex];
 	window.speechSynthesis.speak(utterance);
+}
+
+function getName(){
+  const name = localStorage.getItem('child-name') || 'Джони';
+
+  return name;
 }
 
 
@@ -143,6 +251,12 @@ function generateRandomNumber(min, max) {
   const randomNumber = Math.floor(Math.random() * (max - min + 1)) + min;
 
   return randomNumber;
+}
+
+function onChangeName(){
+  const name= document.getElementById('child-name').value;
+
+  localStorage.setItem('child-name', name);
 }
 
 function onChange() {
@@ -155,8 +269,7 @@ function onChange() {
 	if(a * b === result){
  		const text = `Правильно`;
 		const utterance = new SpeechSynthesisUtterance(text);
-		//utterance.voice = speechSynthesis.getVoices()[20];
-		utterance.voice = pickedLang;
+		utterance.voice = speechSynthesis.getVoices()[20];
 		window.speechSynthesis.speak(utterance);
 
     const buttonRun = document.getElementById('buttonRun');
@@ -167,12 +280,8 @@ function onChange() {
   if(String(result).length === 2 && a * b !== result){
     const text = `Неправильно, попробуй еще раз`;
     const utterance = new SpeechSynthesisUtterance(text);
-    //utterance.voice = speechSynthesis.getVoices()[20];
-    utterance.voice = pickedLang;
+    utterance.voice = speechSynthesis.getVoices()[20];
     window.speechSynthesis.speak(utterance);
-
-    //document.getElementById('result').value = '';
-    //document.getElementById('result').focus();
 
     return;
   }
