--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ function onChange() {
   if(String(result).length === 2 && a * b !== result){
     const text = `Неправильно, попробуй еще раз`;
     const utterance = new SpeechSynthesisUtterance(text);
-    utterance.voice = speechSynthesis.getVoices()[20];
+    utterance.voice = ruVoices[voiceIndex];
     window.speechSynthesis.speak(utterance);
 
     return;
