--- a/index.html
+++ b/index.html
@@ -7,74 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="windows-1251">
 
+  <link rel="stylesheet" href="main.css">
   <style>
-    html {
-      font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol',sans-serif;
-    }
 
-    .container {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      flex: 1;
-    }
-
-    .gear {
-      width: 20px;
-    }
-
-    .gear svg {
-      cursor: pointer;
-      color: hsl(0,0%,30%);
-    }
-
-    .number {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      width: 50px;
-      height: 50px;
-      box-shadow: 0 0 1px rgba(0,0,0,0.32), 0 0 2px rgba(0,0,0,0.08), 0 1px 3px rgba(0,0,0,0.08);
-      border-radius: 6px;
-      background-color: #f2f2f2;
-    }
-
-    .sign {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      width: 25px;
-      height: 25px;
-      box-shadow: 0 0 1px rgba(0,0,0,0.32), 0 0 2px rgba(0,0,0,0.08), 0 1px 3px rgba(0,0,0,0.08);
-      border-radius: 6px;
-      background-color: #f2f2f2;
-    }
-
-    button {
-      margin-top: 15px;
-      font-size: 20px;
-    }
-
-    input {
-      font-size: 20px;
-      width: 100px;
-    }
-
-    .main {
-      margin: 0 auto;
-      max-width: 500px;
-    }
-
-    .main-2 {
-      display: flex;
-    }
-
-    .options {
-      display: none;
-      padding: 5px;
-    }
   </style>
 </head>
 
@@ -92,7 +27,11 @@
     </div>
     <div>
       <label>Знак</label>
-      <select id="sign-select" onchange="onChangeSign()"></select>
+      <select id="sign-select" onchange="onChangeSign()">
+        <option value="plus">Плюс + </option>
+        <option value="minus">Минус -</option>
+        <option value="multiply">Умножить *</option>
+      </select>
     </div>
   </div>
 
@@ -104,7 +43,7 @@
       <input id="result" />
     </div>
     <div class="gear">
-      <svg onclick="onClickGear()" width="20" height="20" viewBox="0 0 16 16" class="quieter parent-hover-link-unquiet" style="shape-rendering: geometricprecision;"><path fill-rule="nonzero" fill="currentColor" d="M2.5 11.5C2.36739 11.5 2.24021 11.5527 2.14645 11.6464C2.05268 11.7402 2 11.8674 2 12C2 12.1326 2.05268 12.2598 2.14645 12.3536C2.24021 12.4473 2.36739 12.5 2.5 12.5H13.5C13.6326 12.5 13.7598 12.4473 13.8536 12.3536C13.9473 12.2598 14 12.1326 14 12C14 11.8674 13.9473 11.7402 13.8536 11.6464C13.7598 11.5527 13.6326 11.5 13.5 11.5H2.5Z M2.5 3.5C2.36739 3.5 2.24021 3.55268 2.14645 3.64645C2.05268 3.74021 2 3.86739 2 4C2 4.13261 2.05268 4.25979 2.14645 4.35355C2.24021 4.44732 2.36739 4.5 2.5 4.5H13.5C13.6326 4.5 13.7598 4.44732 13.8536 4.35355C13.9473 4.25979 14 4.13261 14 4C14 3.86739 13.9473 3.74021 13.8536 3.64645C13.7598 3.55268 13.6326 3.5 13.5 3.5H2.5Z M2.5 7.5C2.36739 7.5 2.24021 7.55268 2.14645 7.64645C2.05268 7.74021 2 7.86739 2 8C2 8.13261 2.05268 8.25979 2.14645 8.35355C2.24021 8.44732 2.36739 8.5 2.5 8.5H13.5C13.6326 8.5 13.7598 8.44732 13.8536 8.35355C13.9473 8.25979 14 8.13261 14 8C14 7.86739 13.9473 7.74021 13.8536 7.64645C13.7598 7.55268 13.6326 7.5 13.5 7.5H2.5Z"></path></svg>
+      <svg onclick="onClickGear()" width="25" height="25" viewBox="0 0 16 16" class="quieter parent-hover-link-unquiet" style="shape-rendering: geometricprecision;"><path fill-rule="nonzero" fill="currentColor" d="M2.5 11.5C2.36739 11.5 2.24021 11.5527 2.14645 11.6464C2.05268 11.7402 2 11.8674 2 12C2 12.1326 2.05268 12.2598 2.14645 12.3536C2.24021 12.4473 2.36739 12.5 2.5 12.5H13.5C13.6326 12.5 13.7598 12.4473 13.8536 12.3536C13.9473 12.2598 14 12.1326 14 12C14 11.8674 13.9473 11.7402 13.8536 11.6464C13.7598 11.5527 13.6326 11.5 13.5 11.5H2.5Z M2.5 3.5C2.36739 3.5 2.24021 3.55268 2.14645 3.64645C2.05268 3.74021 2 3.86739 2 4C2 4.13261 2.05268 4.25979 2.14645 4.35355C2.24021 4.44732 2.36739 4.5 2.5 4.5H13.5C13.6326 4.5 13.7598 4.44732 13.8536 4.35355C13.9473 4.25979 14 4.13261 14 4C14 3.86739 13.9473 3.74021 13.8536 3.64645C13.7598 3.55268 13.6326 3.5 13.5 3.5H2.5Z M2.5 7.5C2.36739 7.5 2.24021 7.55268 2.14645 7.64645C2.05268 7.74021 2 7.86739 2 8C2 8.13261 2.05268 8.25979 2.14645 8.35355C2.24021 8.44732 2.36739 8.5 2.5 8.5H13.5C13.6326 8.5 13.7598 8.44732 13.8536 8.35355C13.9473 8.25979 14 8.13261 14 8C14 7.86739 13.9473 7.74021 13.8536 7.64645C13.7598 7.55268 13.6326 7.5 13.5 7.5H2.5Z"></path></svg>
     </div>
   </div>
   <button id="buttonRun" onclick="run()">Задача</button>
@@ -118,13 +57,30 @@
 
 <script>
   let voiceIndex = Number(localStorage.getItem('voice-index')) || 0;
-  let sign = localStorage.getItem('sign') || 'X';
+  let sign = localStorage.getItem('sign') || 'multiply';
 
-  function onChangeSign(){
+  document.getElementById('sign-select').value = sign;
 
+  const SIGNS = {
+    plus: '+',
+    minus: '-',
+    multiply: 'X'
   }
 
-  document.getElementById('sign').innerHTML = sign;
+  const ACTION = {
+    plus: 'плюс',
+    minus: 'минус',
+    multiply: 'умножить на '
+  }
+
+  function onChangeSign(){
+    const newSign = document.getElementById('sign-select').value;
+
+    localStorage.setItem('sign', newSign);
+    document.getElementById('sign').innerHTML = SIGNS[newSign];
+  }
+
+  document.getElementById('sign').innerHTML = SIGNS[sign];
 
   function onChangeVoice(){
     const el = document.getElementById('voices');
@@ -198,7 +154,7 @@ document.getElementById('child-name').value = getName();
 function getNextNumbers(){
   const a = generateRandomNumber(1, 10);
   const b = generateRandomNumber(1, 10);
-  const key = a + '-' + b;
+  const key = `${a} ${SIGNS[sign]} ${b}`;
 
   if(deep > 10){
     return {
@@ -244,7 +200,7 @@ function run(){
 
   const name = getName();
 
-	const text = `${name}, сколько будет ${a} умножить на ${b}?`;
+	const text = `${name}, сколько будет ${a} ${ACTION[sign]} ${b}?`;
 
 	const utterance = new SpeechSynthesisUtterance(text);
   utterance.voice = ruVoices[voiceIndex];
@@ -275,7 +231,21 @@ function onChange() {
 	const b = parseInt(secondNumber.innerHTML);
 	const result = parseInt(document.getElementById('result').value);
 
-	if(a * b === result){
+  let rightAnswer;
+
+  switch (sign){
+    case 'plus':
+      rightAnswer = a + b;
+      break;
+    case 'minus':
+      rightAnswer = a - b;
+      break;
+    case 'multiply':
+      rightAnswer = a * b;
+      break;
+  }
+
+	if(rightAnswer === result){
  		const text = `Правильно`;
 		const utterance = new SpeechSynthesisUtterance(text);
 		utterance.voice = ruVoices[voiceIndex];
@@ -286,7 +256,7 @@ function onChange() {
     buttonRun.removeAttribute('disabled');
 	}
 
-  if(String(result).length === 2 && a * b !== result){
+  if(String(result).length === 2 && rightAnswer !== result){
     const text = `Неправильно, попробуй еще раз`;
     const utterance = new SpeechSynthesisUtterance(text);
     utterance.voice = ruVoices[voiceIndex];
