--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <div class="main">
 
   <div class="options" id="options">
-    <div>
+    <div class="field">
       <label>Имя ребенка</label> <input id="child-name">
     </div>
-    <div>
+    <div class="field">
       <label>Голос</label>
       <select id="voices" onchange="onChangeVoice()"></select>
     </div>
-    <div>
+    <div class="field">
       <label>Знак</label>
       <select id="sign-select" onchange="onChangeSign()">
         <option value="plus">Плюс + </option>
@@ -42,8 +42,10 @@
       <div id="secondNumber" class="number"></div>
       <input id="result" />
     </div>
-    <div class="gear">
-      <svg onclick="onClickGear()" width="25" height="25" viewBox="0 0 16 16" class="quieter parent-hover-link-unquiet" style="shape-rendering: geometricprecision;"><path fill-rule="nonzero" fill="currentColor" d="M2.5 11.5C2.36739 11.5 2.24021 11.5527 2.14645 11.6464C2.05268 11.7402 2 11.8674 2 12C2 12.1326 2.05268 12.2598 2.14645 12.3536C2.24021 12.4473 2.36739 12.5 2.5 12.5H13.5C13.6326 12.5 13.7598 12.4473 13.8536 12.3536C13.9473 12.2598 14 12.1326 14 12C14 11.8674 13.9473 11.7402 13.8536 11.6464C13.7598 11.5527 13.6326 11.5 13.5 11.5H2.5Z M2.5 3.5C2.36739 3.5 2.24021 3.55268 2.14645 3.64645C2.05268 3.74021 2 3.86739 2 4C2 4.13261 2.05268 4.25979 2.14645 4.35355C2.24021 4.44732 2.36739 4.5 2.5 4.5H13.5C13.6326 4.5 13.7598 4.44732 13.8536 4.35355C13.9473 4.25979 14 4.13261 14 4C14 3.86739 13.9473 3.74021 13.8536 3.64645C13.7598 3.55268 13.6326 3.5 13.5 3.5H2.5Z M2.5 7.5C2.36739 7.5 2.24021 7.55268 2.14645 7.64645C2.05268 7.74021 2 7.86739 2 8C2 8.13261 2.05268 8.25979 2.14645 8.35355C2.24021 8.44732 2.36739 8.5 2.5 8.5H13.5C13.6326 8.5 13.7598 8.44732 13.8536 8.35355C13.9473 8.25979 14 8.13261 14 8C14 7.86739 13.9473 7.74021 13.8536 7.64645C13.7598 7.55268 13.6326 7.5 13.5 7.5H2.5Z"></path></svg>
+    <div class="gear" onclick="onClickGear()">
+      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-three-bars Button-visual">
+        <path d="M1 2.75A.75.75 0 0 1 1.75 2h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 2.75Zm0 5A.75.75 0 0 1 1.75 7h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 7.75ZM1.75 12h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Z"></path>
+      </svg>
     </div>
   </div>
   <button id="buttonRun" onclick="run()">Задача</button>
@@ -64,7 +66,7 @@
   const SIGNS = {
     plus: '+',
     minus: '-',
-    multiply: 'X'
+    multiply: 'x'
   }
 
   const ACTION = {
@@ -76,8 +78,6 @@
   function onChangeSign(){
     const newSign = document.getElementById('sign-select').value;
 
-	sign = newSign;  
-	  
     localStorage.setItem('sign', newSign);
     document.getElementById('sign').innerHTML = SIGNS[newSign];
   }
